# junhae-studio-store

./: .dockerignore  Dockerfile  requirements.txt
backend/: .env  .env.local  database.py  index.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
backend/config/: cloudinary.js  connectDb.js
backend/controller/: contactController.js  orderController.js  productController.js  reviewController.js  uploadController.js
backend/models/: Contact.js  Order.js  Product.js  Review.js  product.py
backend/routes/: contactRoutes.js  orderRoutes.js  productRoutes.js  reviewRoutes.js  uploadRoutes.js
dashboard/: next.config.ts  package-lock.json
dashboard/app/: layout.tsx
dashboard/app/context/: AuthContext.tsx  OrderContext.tsx  ProductContext.tsx
dashboard/app/dashboard/: layout.tsx  page.tsx
dashboard/app/data/: constants.ts  types.ts
dashboard/app/icons/: ArrowRightIcon.tsx  CheckCircleIcon.tsx  CheckIcon.tsx  CompassIcon.tsx  FacebookIcon.tsx  GoogleIcon.tsx  LockIcon.tsx  MailIcon.tsx  MinusIcon.tsx  MoonIcon.tsx  PinterestIcon.tsx  PlusIcon.tsx  RefreshIcon.tsx  SearchIcon.tsx  SettingsIcon.tsx  ShirtIcon.tsx  ShoppingCartIcon.tsx  SparklesIcon.tsx  SunIcon.tsx  TikTokIcon.tsx  Trash2Icon.tsx  TruckIcon.tsx  TwitterIcon.tsx  TypeIcon copy.tsx  UploadCloudIcon.tsx
frontend/: metadata.json  package-lock.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/blog/: page.tsx
frontend/app/cart/: page.tsx
frontend/app/checkout/: page.tsx
frontend/app/components/: LayoutWrapper.tsx
(+84 files in other folders)
